finish admin page

--- a/app/assets/style/helpers/_base.scss
+++ b/app/assets/style/helpers/_base.scss
@@ -7,3 +7,13 @@
 .lh-33 {
   line-height: 33px;
 }
+.btn {
+  &.dropdown-toggle,
+  &.modal-toggle,
+  .material-icons,
+  .material-icons-outlined {
+    &:hover {
+      color: $green;
+    }
+  }
+}
