move reused code to utilities

--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -3,8 +3,7 @@
 @import "./helpers/mixins";
 @import "../../../node_modules/bootstrap/scss/bootstrap";
 
-@import "./helpers/base";
-@import './module/table';
+@import "./helpers/utilities";
 
 @import './layout/header';
 
